# aoc-2021

./: .envrc  .gitignore  Cargo.toml  LICENSE.txt  README.md  package-lock.json  package.json
aoc2021-day0/: Cargo.toml  wrangler.toml
aoc2021-day0/src/: lib.rs
aoc2021-day1/: Cargo.toml  wrangler.toml
aoc2021-day1/src/: lib.rs
aoc2021-day10/: Cargo.toml  wrangler.toml
aoc2021-day10/src/: lib.rs
aoc2021-day2/: Cargo.toml  wrangler.toml
aoc2021-day2/src/: lib.rs
aoc2021-day3/: Cargo.toml  wrangler.toml
aoc2021-day3/src/: lib.rs
aoc2021-day4/: Cargo.toml  wrangler.toml
aoc2021-day4/src/: lib.rs
aoc2021-day5/: Cargo.toml  wrangler.toml
aoc2021-day5/src/: lib.rs
aoc2021-day6/: Cargo.toml  wrangler.toml
aoc2021-day6/src/: lib.rs
aoc2021-day7/: Cargo.toml  wrangler.toml
aoc2021-day7/src/: lib.rs
aoc2021-day8/: Cargo.toml  wrangler.toml
aoc2021-day8/src/: lib.rs
aoc2021-day9/: Cargo.toml  wrangler.toml
aoc2021-day9/src/: lib.rs
scripts/: new-day.sh  publish-day.sh
utils/: Cargo.toml
utils/src/: lib.rs
